fix: minor visual bug fixes after angular 15 migration * added user style to defaultConfig.json in apps it was missing, since it now won't load without it * fixed mailing lists checkbox misalignment * added the visibility icon to the form field in settings-samba-password.component * fixed a bug that made password form jump when spinner was visible (global spinner margin was removed, it was added just for a slight visual change, I believe we can do without it)

--- a/apps/password-reset/src/_styles.scss
+++ b/apps/password-reset/src/_styles.scss
@@ -78,9 +78,16 @@ $password-reset-theme: mat.define-light-theme(
   $user-primary: mat.define-palette($user-dynamic-colors, 500);
   $user-accent: mat.define-palette(mat.$green-palette, 600);
 
-  $user-theme: mat.define-light-theme($user-primary, $user-accent);
+  $user-theme: mat.define-light-theme(
+    (
+      color: (
+        primary: $user-primary,
+        accent: $user-accent,
+      ),
+    )
+  );
 
-  @include mat.all-component-themes($user-theme);
+  @include mat.all-component-colors($user-theme);
 }
 
 .mat-mdc-unelevated-button {
