--- a/apps/user-profile/src/_styles.scss
+++ b/apps/user-profile/src/_styles.scss
@@ -296,11 +296,6 @@ mat-list-item .mat-mdc-form-field-subscript-wrapper {
   flex-wrap: wrap;
 }
 
-// extra spinner padding in dialog
-.mat-mdc-dialog-container .mat-mdc-progress-spinner {
-  margin: 24px;
-}
-
 .mat-mdc-checkbox label,
 .mat-mdc-radio-button label,
 .mat-mdc-slide-toggle label {
